remove preview feature usage (am I dumb?)